--- a/app/index.html
+++ b/app/index.html
@@ -19,12 +19,12 @@ current: index
 
 <div class="container-fluid mb-17">
   <div class="pt-17 mb-lg-18 mb-14" id="about">
-    <h2 class="topic01 pb-12 text-center">About</h2>
+    <h2 class="topic01 pb-12 text-center ff-red">About</h2>
   </div>
   <div class="row mb-17">
     <div class="col-12 col-lg-5 offset-lg-1 d-flex flex-column justify-content-center mb-14">
-      <h5 class="mb-8 text-center text-lg-start">關於我們<br>About us</h5>
-      <div class="pe-lg-20 text-md-center text-lg-start">
+      <h5 class="mb-8 text-center text-lg-start ff-red">關於我們<br>About us</h5>
+      <div class="pe-lg-20 text-md-center text-lg-start ff-red">
         Irréel Visual Art 致力於提供不同視覺具象化的設計服務，以精細寫實的視覺表現、渲染過去與未來。<br>The imaginary architectures
         rethink the city as a dream landscape, blending memories of the past with visions for the
         future.
@@ -35,7 +35,7 @@ current: index
     </div>
   </div>
   <div class="pt-17 mb-lg-18 mb-14" id="services">
-    <h2 class="topic01 pb-12 text-center">Services</h2>
+    <h2 class="topic01 pb-12 text-center ff-red">Services</h2>
   </div>
   <div class="row mb-17">
     <div class="col-lg-11 offset-lg-1 col-12">
@@ -44,8 +44,8 @@ current: index
           <div class="swiper-slide d-flex flex-column flex-lg-row justify-content-start">
             <div class="img-box__01 me-lg-10 mb-8 mb-lg-0"></div>
             <div class="text-start">
-              <h5 class="mb-lg-14 mb-8">ARCHITECTURAL<br>VISUALISATION</h5>
-              <p class="text-box__01">
+              <h5 class="mb-lg-14 mb-8 ff-red">ARCHITECTURAL<br>VISUALISATION</h5>
+              <p class="text-box__01 ff-red">
                 “Light, shadow, texture and color are the tools that >we combine to communicate the values of
                 architecture through an image.”
               </p>
@@ -54,8 +54,8 @@ current: index
           <div class="swiper-slide d-flex flex-column flex-lg-row justify-content-start">
             <div class="img-box__02 me-lg-10 mb-8 mb-lg-0"></div>
             <div class="text-start">
-              <h5 class="mb-lg-14 mb-8">INTERACTIVE<br>VR</h5>
-              <p class="text-box__01">
+              <h5 class="mb-lg-14 mb-8 ff-red">INTERACTIVE<br>VR</h5>
+              <p class="text-box__01 ff-red">
                 Realistic Interactive Stereoscopic 3D 360-degree VR Panoramic Walk-Through Tours for marketing suites
                 and design development for Architects, Interior Designers, and Developer.
               </p>
@@ -64,8 +64,8 @@ current: index
           <div class="swiper-slide d-flex flex-column flex-lg-row justify-content-start">
             <div class="img-box__03 me-lg-10 mb-8 mb-lg-0"></div>
             <div class="text-start">
-              <h5 class="mb-lg-14 mb-14">MODELING</h5>
-              <p class="text-box__01">
+              <h5 class="mb-lg-14 mb-14 ff-red">MODELING</h5>
+              <p class="text-box__01 ff-red">
                 Advanced modeling methods allow realizing explicit, complicated 3D models of textiles, upholstered beds,
                 sofas, and finely detailed organic shapes.
               </p>
@@ -74,8 +74,8 @@ current: index
           <div class="swiper-slide d-flex flex-column flex-lg-row justify-content-start">
             <div class="img-box__04 me-lg-10 mb-8 mb-lg-0"></div>
             <div class="text-start">
-              <h5 class="mb-lg-14 mb-8">ARCHITECTURAL<br>MOVIE</h5>
-              <p class="text-box__01">
+              <h5 class="mb-lg-14 mb-8 ff-red">ARCHITECTURAL<br>MOVIE</h5>
+              <p class="text-box__01 ff-red">
                 Exterior and Interior Walk-Through/Fly-Through Animations - Marvelous, exuberant, atmospheric marketing
                 animations
               </p>
@@ -86,7 +86,7 @@ current: index
     </div>
   </div>
   <div class="pt-17 mb-lg-18 mb-14" id="work">
-    <h2 class="topic01 pb-12 text-center">Works</h2>
+    <h2 class="topic01 pb-12 text-center ff-red">Works</h2>
   </div>
   <div class="row">
     <div class="col-lg-11 offset-lg-1 col-12">
@@ -170,6 +170,14 @@ current: index
               <p class="text-box__01">Irreel Visual</p>
             </div>
             <div class="img-box__14">
+            </div>
+          </div>
+          <div class="swiper-slide d-flex flex-column flex-xl-row justify-content-center align-items-center">
+            <div class="text-center">
+              <h5 class="mb-5">2017</h5>
+              <p class="text-box__01">Irreel Visual</p>
+            </div>
+            <div class="img-box__15">
             </div>
           </div>
           <div class="swiper-slide d-flex flex-column flex-xl-row justify-content-center align-items-center d-none d-lg-block">
