--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@ current: index
 
 <div class="container-fluid intro px-0 mb-17" id="h">
   <div class="container-fluid d-flex justify-content-center align-items-center h-10 position-relative">
-    <img class="z-2 img-fluid p-10" src="./assets/images/irreel.png" alt="">
+    <img class="z-2 img-fluid p-10" src="./assets/images/irreel.png" alt="" data-aos="fade-up" data-aos-duration="1000">
     <div class="bg-primary bg-blend h-10 container-fluid position-absolute"></div>
   </div>
   <ul class="list-unstyled intro-slide">
@@ -19,25 +19,25 @@ current: index
 
 <div class="container-fluid mb-17">
   <div class="pt-17 mb-lg-18 mb-14" id="about">
-    <h2 class="topic01 pb-12 text-center ff-red">About</h2>
+    <h2 class="topic01 pb-12 text-center ff-red" data-aos="fade-up">About</h2>
   </div>
   <div class="row mb-17">
     <div class="col-12 col-lg-5 offset-lg-1 d-flex flex-column justify-content-center mb-14">
-      <h5 class="mb-8 text-center text-lg-start ff-red">關於我們<br>About us</h5>
-      <div class="pe-lg-20 text-md-center text-lg-start ff-red">
+      <h5 class="mb-8 text-center text-lg-start ff-red" data-aos="fade-up">關於我們<br>About us</h5>
+      <div class="pe-lg-20 text-md-center text-lg-start ff-red" data-aos="fade-up">
         Irréel Visual Art 致力於提供不同視覺具象化的設計服務，以精細寫實的視覺表現、渲染過去與未來。<br>The imaginary architectures
         rethink the city as a dream landscape, blending memories of the past with visions for the
         future.
       </div>
     </div>
-    <div class="col-12 col-lg-6 pe-lg-0 px-0">
+    <div class="col-12 col-lg-6 pe-lg-0 px-0" data-aos="fade-up">
       <img src="./assets/images/3.JPG" class="img-fluid fit h-60" alt="">
     </div>
   </div>
   <div class="pt-17 mb-lg-18 mb-14" id="services">
-    <h2 class="topic01 pb-12 text-center ff-red">Services</h2>
+    <h2 class="topic01 pb-12 text-center ff-red" data-aos="fade-up">Services</h2>
   </div>
-  <div class="row mb-17">
+  <div class="row mb-17" data-aos="fade-up">
     <div class="col-lg-11 offset-lg-1 col-12">
       <div class="swiper mySwiper">
         <div class="d-flex swiper-wrapper">
@@ -86,9 +86,9 @@ current: index
     </div>
   </div>
   <div class="pt-17 mb-lg-18 mb-14" id="work">
-    <h2 class="topic01 pb-12 text-center ff-red">Works</h2>
+    <h2 class="topic01 pb-12 text-center ff-red" data-aos="fade-up">Works</h2>
   </div>
-  <div class="row">
+  <div class="row" data-aos="fade-up">
     <div class="col-lg-11 offset-lg-1 col-12">
       <div class="swiper swiper02">
         <div class="d-flex swiper-wrapper">
@@ -196,8 +196,8 @@ current: index
   <div class="row">
     <div class="col-12">
       <div class="">
-        <h2 class="fs-large">Contact Us</h2>
-        <ul class="list-unstyled d-flex justify-content-start align-items-center">
+        <h2 class="fs-large" data-aos="fade-up">Contact Us</h2>
+        <ul class="list-unstyled d-flex justify-content-start align-items-center" data-aos="fade-up">
           <li><a class="fs-2 text-secondary pe-4" href="mailto:irreelvisual@gmail.com"><i class="far fa-envelope"></i></a></li>
           <li><a class="fs-2 text-secondary pe-4" href="https://instagram.com/irreel_visual?igshid=1x4po6czagywv"><i class="fab fa-instagram"></i></i></a></li>
           <li><a class="fs-2 text-secondary" href="https://www.facebook.com/STONE-Visual-Studio-294266148079009/"><i class="fab fa-facebook"></i></a></li>
